@@ -1,4 +1,5 @@
 Development
+	Slow down the cache update messages to only 1 per 1/2 second
 	More safety checks in Write method
 	Don't allow NULL filename
 	When opening the media and no window has been set, tell gnome-mplayer to run hidden
